--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev": "ng serve --open"
+    "dev": "ng serve --open",
+    "prod": "ng build --prod"
   },
   "private": true,
   "dependencies": {
