--- a/package.json
+++ b/package.json
@@ -14,44 +14,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/cli": "~6.2.4",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
-    "d3": "^5.7.0",
-    "express": "^4.16.3",
-    "path": "^0.12.7",
-    "rxjs": "~6.2.0",
-    "typescript": "~2.9.2",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "^11.2.5",
+    "@angular/cli": "^11.2.4",
+    "@angular/common": "^11.2.5",
+    "@angular/compiler": "^11.2.5",
+    "@angular/compiler-cli": "^11.2.5",
+    "@angular/core": "^11.2.5",
+    "@angular/forms": "^11.2.5",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^11.2.5",
+    "@angular/platform-browser-dynamic": "^11.2.5",
+    "@angular/router": "^11.2.5",
+    "bootstrap": "*",
+    "core-js": "^3.9.1",
+    "d3": "^6.6.0",
+    "express": "*",
+    "path": "*",
+    "rxjs": "^6.6.6",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
-    "enhanced-resolve": "^3.3.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
+    "@angular-devkit/build-angular": "*",
+    "@angular/language-service": "*",
+    "@types/jasmine": "*",
+    "@types/jasminewd2": "*",
+    "@types/node": "*",
+    "codelyzer": "*",
+    "enhanced-resolve": "*",
+    "jasmine-core": "*",
+    "jasmine-spec-reporter": "*",
+    "karma": "*",
+    "karma-chrome-launcher": "*",
+    "karma-coverage-istanbul-reporter": "*",
+    "karma-jasmine": "*",
+    "karma-jasmine-html-reporter": "*",
+    "protractor": "*",
+    "ts-node": "*",
+    "tslint": "*",
+    "typescript": "^4.1.5"
   },
   "engines": {
     "node": "8.9.4",
