--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "e2e": "ng e2e",
     "dev": "ng serve --open",
     "prod": "ng build --prod",
-    "postinstall": "npm run prod"
+    "postinstall": "npm run prod",
+    "update:packages": "node wipe-dependencies.js && rm -rf node_modules && npm update --save-dev && npm update --save"
   },
   "private": true,
   "dependencies": {
